--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./favicon.png" type="image/png">
+    <link rel="icon" href="./" type="image/png">
     <title>ADEPTO</title>
 </head>
 <body>
+    <content>
+        <h1>ADEPTO</h1>
+    </content>
     
 </body>
 </html>
