--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./" type="image/png">
     <title>ADEPTO</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <content>
