--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./" type="image/png">
+    <link rel="icon" href="./imagens/logocitadel.png" type="image/png">
     <title>ADEPTO</title>
     <link rel="stylesheet" href="style.css">
 </head>
