--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title> index </title>
-
+		<link rel="icon" href="./imagens/logocitadel.png" type="image/png">
 		<link href="css/style.css" type="text/css" rel="stylesheet"/>
 
 
