--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
 
 	<head>
 		<meta charset="utf-8">
+		<link rel="icon" href="./imagens/logocitadel.png" type="image/png">
 		<title> contato </title>
 
 		<link href="css/style.css" type="text/css" rel="stylesheet"/>
