--- a/sobre.html
+++ b/sobre.html
@@ -5,6 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title> sobre </title>
+		<link rel="icon" href="./imagens/logocitadel.png" type="image/png">
 
 		<link href="css/style.css" type="text/css" rel="stylesheet"/>
 
