--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
 			<button class="apoie" onclick="window.open('https://www.vakinha.com.br/5092764', '_blank')">
 				APOIE O PROJETO
 			</button>
+
+			<div class="Concepts">
+				<p>
+					ATENÇÃO: As artes contidas abaixo podem ter ajuda,
+					de inteligencia artificial e não representa o produto final
+					a Cytadell é uma companhia pequena e busca apoio da tecnologia
+					para conseguir ilustrar o projeto.
+				</p>
+			</div>
+
+
 		
 		</div>
 	</body>
