--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 					a Cytadell é uma companhia pequena e busca apoio da tecnologia
 					para conseguir ilustrar o projeto.
 				</p>
+				<div>
+					<img src="./imagens/concept 1.png" alt="Arte conceitual 1">
+				</div>
 			</div>
 
 
