--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="Concepts">
 				<p>
 					ATENÇÃO: As artes contidas abaixo podem ter ajuda,
-					de inteligencia artificial e não representa o produto final
+					de inteligencia artificial e não representa o produto final,
 					a Cytadell é uma companhia pequena e busca apoio da tecnologia
 					para conseguir ilustrar o projeto.
 				</p>
