--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 			<div class="Concepts">
 				<p>
-					ATENÇÃO: As artes contidas abaixo podem ter ajuda,
+					ATENÇÃO: As artes abaixo podem ter ajuda,
 					de inteligencia artificial e não representa o produto final,
 					a Cytadell é uma companhia pequena e busca apoio da tecnologia
 					para conseguir ilustrar o projeto.
