--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 					a Cytadell é uma companhia pequena e busca apoio da tecnologia
 					para conseguir ilustrar o projeto.
 				</p>
-				<div class="imagens">
-					<img src="./imagens/concept 1.png" alt="Arte conceitual 1">
+				<div>
+					<img src="./imagens/concept 1.png" alt="Arte conceitual 1" class="imagens">
 				</div>
 			</div>
 
